Added footer information and styling

--- a/index.html
+++ b/index.html
@@ -9,5 +9,12 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <style> 
+    * {
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    </style>
   </body>
 </html>
